# credit-risk-assessment

./: .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/: sample_payloads.json
docs/: ARCHITECTURE.md  DESIGN_AND_RESEARCH.md  HYPERPARAMETER_TUNING.md  IMBALANCE_AND_METRICS_FAQ.md  ML_LIFECYCLE.md  MODEL_CARD.md  PRESENTATION_GUIDE.md  PRESENTATION_SCRIPT_5MIN.md  RESEARCH_FINDINGS.md  product.md
models/: README.md  metrics.json  metrics_multitable_30k.json  metrics_summary.md  metrics_summary_multitable_30k.md
models/full_data/: README.md  metrics.json  metrics_summary.md
reports/eda/: eda_report.json  eda_report.md
scripts/: example_assess.py  export_sample_payload.py  push_to_github.ps1  push_with_pat.ps1  run_academic_lifecycle.py  run_dashboard.ps1  train_models.py  write_full_summary.py
src/credit_risk/: __init__.py  api.py  config.py  data.py  eda.py  evaluation.py  explain.py  features_multitable.py  predict.py  preprocess.py  schemas.py  train.py  tuning.py
tests/: README.md  conftest.py  test_api.py  test_evaluation.py  test_explain.py  test_predict.py  test_train.py  test_tuning.py
